[tool.poetry]
name = "skb"
version = "1.2.9"
description = "Synth Kit builder for Synthstrom Deluge"
authors = ["neilbaldwin <neil.baldwin@mac.com>"]
repository = "https://github.com/neilbaldwin/skb"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.6.3"
importlib-metadata = {version = "^1.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
skb = "skb.skb:main"
