
[metadata]
name = skb
author = Neil Baldwin
author-email = neil.baldwin@mac.com
summary = SKB - Synth Kit Builder for Synthstrom Deluge
description-file = README.md
description-content-type = text/markdown
requires-python - >=3.6
home-page = https://github.com/neilbaldwin/skb
project_urls =
    Source Code = https://github.com/neilbaldwin/skb
license = MIT
classifier =
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    synthstrom
    deluge
    utility
    synth
    kit 
    builder

[files]
packages = 
    skb

[entry_points]
console_scripts =
    sbk = src.skb:main
