
[metadata]
name = skb
author = Neil Baldwin
author_email = neil.baldwin@mac.com
summary = SKB - Synth Kit Builder for Synthstrom Deluge
description_file = README.md
description_content_type = text/markdown
requires_python = >=3.6
home_page = https://github.com/neilbaldwin/skb
project_urls =
    Source Code = https://github.com/neilbaldwin/skb
license = MIT
classifier =
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

keywords =
    synthstrom
    deluge
    utility
    synth
    kit 
    builder
